duah-apps/payment/api-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duah-payment-api-dep
  namespace: duah-apps
  labels:
    app: duah-payment-api
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: duah-payment-api
  template:
    metadata:
      labels:
        app: duah-payment-api
    spec:
      containers:
      - name: duah-payment
        image: ghcr.io/denuafhaengige/duah-payment:sha-d3895d1
        args:
        - "--mode"
        - "api"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: health
          containerPort: 9090
          protocol: TCP
        resources:
          limits:
            cpu: 32m
            memory: 64Mi
          requests:
            cpu: 16m
            memory: 32Mi
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: health
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 30
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: health
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 30
