duah-apps/payment/payment-reconciler-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duah-payment-reconciler-dep
  namespace: duah-apps
  labels:
    app: duah-payment-reconciler
spec:
  replicas: 0
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: duah-payment-reconciler
  template:
    metadata:
      labels:
        app: duah-payment-reconciler
    spec:
      containers:
      - name: duah-payment
        image: ghcr.io/denuafhaengige/duah-payment:master-bcf5884-1646430703 # {"$imagepolicy": "duah-apps:duah-payment-image-policy"}
        args:
        - "--mode"
        - "reconciler"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: health
          containerPort: 9090
          protocol: TCP
        resources:
          limits:
            cpu: 32m
            memory: 128Mi
          requests:
            cpu: 16m
            memory: 32Mi
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: health
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 30
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: health
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 30
