duah-apps/payment/payment-api-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: duah-payment-api-svc
  namespace: duah-apps
  labels:
    app: duah-payment-api
spec:
  type: ClusterIP
  selector:
    app: duah-payment-api
  ports:
  - name: http
    port: 80
    protocol: TCP
